test/pass/codegen/actions/missionComplete/test.twge
block init {
    actions {
        missionComplete(camp = "所有");
    }
}