test/fail/codegen/campEnum/test.twge
block init {
    actions {
        addActor();
        addActor(camp = "random");
        addActor(camp = "myCamp");
    }
}